<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.wangliang161220.ant.activity.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <ImageView
            android:id="@+id/login_img_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/close"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:cursorVisible="true"
            android:hint="@string/username_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/grey"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:cursorVisible="true"
            android:hint="@string/userpwd_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/grey"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_register"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/blue"
            android:autoLink="all"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:layout_alignParentRight="true"
            android:textColor="@color/blue"
            android:textSize="14sp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/login_tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:background="@drawable/btn_login_selector"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:textSize="22sp"/>

</LinearLayout>
