<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_locate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wangliang161220.ant.activity.LocateActivity">
    <LinearLayout
        android:background="@color/grey"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/locate_tv_opointment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/cambridgeBlack2"
            android:gravity="center_horizontal"
            android:text="@string/oppointment"/>
        <TextView
            android:id="@+id/locate_tv_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/cambridgeBlack2"
            android:gravity="center_horizontal"
            android:text="@string/start_noise"/>
        <TextView
            android:id="@+id/locate_tv_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/cambridgeBlack2"
            android:gravity="center_horizontal"
            android:text="@string/close_noise"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/locate_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</LinearLayout>
