<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cambridgeWhite"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="12dp"
        android:background="@color/blue"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:background="@drawable/default_portrait"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="张三"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="上次登录：2016-12-20 14:25:54"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:background="@color/white"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/cambridgeBlack2"
            android:text="@string/my_account"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/entry"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_marginTop="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/cambridgeBlack2"
            android:text="@string/my_notice"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/entry"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_marginTop="2px"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/cambridgeBlack2"
            android:text="@string/my_task"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/entry"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_marginTop="6dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/cambridgeBlack2"
            android:text="@string/set"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/entry"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>
</ScrollView>